# AdventOfCode2023

./: README.md  pyproject.toml
day1/: main.py
day15/: README.md  main.py
day15/res/: stage1_challenge.txt
day18/: main.py
day2/: README.md  main.py
day3/: README.md  main.py
day4/: main.py
day5/: main.py
day5/res/: stage1_sample.txt
day6/: README.md  main.py
day7/: README.md  main.py
