[tool.poetry]
name = "tmp"
version = "0.1.0"
description = ""
authors = ["Alexander Heinisch <6390741+AlexHeinisch@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
pytest = "^7.4.3"
pydantic = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
